--- a/css/introduction.css
+++ b/css/introduction.css
@@ -15,6 +15,8 @@
 }
 #introduction .tryit, #introduction .project {
 	border-bottom: 1px solid #aaa;
+}
+#introduction .tryit {
 	padding-bottom: 15px;
 }
 #introduction .tryit p {
@@ -36,10 +38,14 @@
 #introduction .project {
 	text-align: center;
 	font-family: sans-serif;
+	padding-bottom: 8px;
+}
+#introduction .project .countdown {
+	font-size: 13px;
 }
 #introduction .facebook {
 	display: block;
-	margin-top: 25px;
+	margin-top: 15px;
 	text-align: center;
 	z-index: 1;
 }
